--- a/pom.xml
+++ b/pom.xml
@@ -48,8 +48,6 @@
             <artifactId>mysql-connector-java</artifactId>
             <version>5.1.3</version>
         </dependency>
-
-
         <!--photo-->
         <dependency>
             <groupId>commons-fileupload</groupId>
@@ -59,7 +57,7 @@
         <dependency>
             <groupId>commons-io</groupId>
             <artifactId>commons-io</artifactId>
-            <version>2.5</version>
+            <version>2.4</version>
         </dependency>
         <dependency>
             <groupId>javax.servlet</groupId>
@@ -67,56 +65,52 @@
             <version>2.5</version>
             <scope>provided</scope>
         </dependency>
-
         <dependency>
             <groupId>org.hibernate</groupId>
             <artifactId>hibernate-validator</artifactId>
-            <version>4.3.1.Final</version>
+            <version>4.2.0.Final</version>
         </dependency>
-
         <dependency>
             <groupId>javax.validation</groupId>
             <artifactId>validation-api</artifactId>
             <version>1.0.0.GA</version>
         </dependency>
-
-
-        <!--spring security for validation-->
+        <!--security-->
         <dependency>
             <groupId>org.springframework</groupId>
             <artifactId>spring-context</artifactId>
-            <version>4.1.4.RELEASE</version>
+            <version>4.2.4.RELEASE</version>
         </dependency>
-        <!--This dependency should be after  spring-context-->
         <dependency>
             <groupId>org.springframework.security</groupId>
             <artifactId>spring-security-core</artifactId>
-            <version>4.1.4.RELEASE</version>
+            <version>3.2.5.RELEASE</version>
         </dependency>
         <dependency>
             <groupId>org.springframework.security</groupId>
             <artifactId>spring-security-web</artifactId>
-            <version>4.1.4.RELEASE</version>
+            <version>3.2.5.RELEASE</version>
         </dependency>
         <dependency>
             <groupId>org.springframework.security</groupId>
             <artifactId>spring-security-config</artifactId>
-            <version>4.1.4.RELEASE</version>
+            <version>3.2.5.RELEASE</version>
         </dependency>
-
-        <!--JSON-->
+        <dependency>
+            <groupId>com.fasterxml.jackson.core</groupId>
+            <artifactId>jackson-core</artifactId>
+            <version>2.5.1</version>
+        </dependency>
         <dependency>
             <groupId>com.fasterxml.jackson.core</groupId>
             <artifactId>jackson-annotations</artifactId>
             <version>2.5.1</version>
         </dependency>
-
         <dependency>
             <groupId>com.fasterxml.jackson.core</groupId>
             <artifactId>jackson-databind</artifactId>
             <version>2.5.1</version>
         </dependency>
-
 
 
     </dependencies>
@@ -134,6 +128,7 @@
             </plugin>
         </plugins>
     </build>
+
 
 
 </project>
